Recreate project with new structure: move Django project to backend/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ __pycache__/
 *$py.class
 *.so
 .Python
+env/
+venv/
+ENV/
 build/
 develop-eggs/
 dist/
@@ -20,22 +23,12 @@ wheels/
 .installed.cfg
 *.egg
 
-# Virtual Environment
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
 # Django
 *.log
-*.pot
-*.pyc
+local_settings.py
 db.sqlite3
 db.sqlite3-journal
-/media
-/staticfiles
-/static
+/backend/db.sqlite3
 
 # IDE
 .vscode/
@@ -43,54 +36,12 @@ db.sqlite3-journal
 *.swp
 *.swo
 *~
+
+# OS
 .DS_Store
+Thumbs.db
 
-# Environment variables
+# Environment
 .env
-.env.local
-.env.*.local
-
-# Secret key (если вынесен в отдельный файл)
-secret_key.txt
-
-# Миграции (раскомментируйте, если не хотите коммитить миграции)
-# */migrations/*.py
-# !*/migrations/__init__.py
-
-# Coverage reports
-htmlcov/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# Celery
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+.venv
 
