Add Railway deployment configuration - Procfile, railway.json, updated settings for production, setup_admin script

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ wheels/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-/backend/db.sqlite3
+/staticfiles/
+/media/
 
 # IDE
 .vscode/
@@ -43,5 +44,4 @@ Thumbs.db
 
 # Environment
 .env
-.venv
-
+.env.local
