--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Django>=5.0,<6.0
-djangorestframework>=3.14.0
-djangorestframework-simplejwt>=5.2.0
-gunicorn>=21.2.0
-whitenoise>=6.6.0
-psycopg2-binary>=2.9.9
-dj-database-url>=2.1.0
+Django==5.2.8
+djangorestframework==3.16.1
+djangorestframework-simplejwt==5.5.1
+gunicorn==23.0.0
+whitenoise==6.11.0
+psycopg2-binary==2.9.11
+dj-database-url==2.1.0
 
